--- a/styles/print.css
+++ b/styles/print.css
@@ -5,7 +5,7 @@ display: none;
   
   @media print {
 
-    header, ooter, img{
+    footer, img{
      display: none;
     }
     a[href]:after {
@@ -16,9 +16,21 @@ display: none;
      .col-1 {
       display: flex;
       flex-direction: row;
-
   
     }
+
+    header {
+      text-align: center;
+        background-image: none;
+        min-height: 0;
+  
+    }
+.title, .nametitle, .blurbtitle {
+  text-align: center;
+  margin-top: 0;
+  /* padding-left: 0; */
+
+}
 
     .col-4 {
 
